# tissla-dotfiles

./: .gitignore  build-theme.sh  install.sh  printlogo.sh  setup-instructions  theme.env
alacritty/: alacritty.toml
fastfetch/: config.jsonc  tissla.txt
hypr/: autostart.conf  environment.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  monitors.conf  user.conf  workspaces.conf
nvim/: init.lua  lazy-lock.json  sysinit.vim
quickshell/: BaseWidget.qml  CalendarState.qml  CalendarWidget.qml  CpuRamWidget.qml  DynamicWidget.qml  GaugeWidget.qml  GlobalMouse.qml  GpuState.qml  GpuWidget.qml  SettingsManager.qml  Theme.qml  ThemeManager.qml  ThermometerWidget.qml  VolumeState.qml  VolumeWidget.qml  WallpaperManager.qml  WidgetManager.qml  WidgetStateFactory.qml  qmldir  settings.json  shell.qml
quickshell/AudioBackend/: CMakeLists.txt  README.md  cavacore.c  cavacore.h  main.c
quickshell/AudioBackend/.cache/clangd/index/: cavacore.c.D70FB743A946BE02.idx  cavacore.h.E64A99DE63AB6590.idx  common.c.0008824C2B26EF5E.idx  common.c.0BA859C675D588CF.idx  common.h.68DAE26BBC2F2914.idx  common.h.8C0B3635753954A7.idx  main.c.72A0C4CA86F933AB.idx  pipewire.c.4BFD6E2A77BF1543.idx  pipewire.c.69A304B5FF149373.idx  pipewire.h.1B1EFEDC7F6F1E55.idx  pipewire.h.A578A719471F91A3.idx  raw.c.604A447BD02F4709.idx  raw.c.CA7F39BF50392C65.idx  raw.h.2E3C7434E977BFC3.idx  raw.h.9821560C50D1193D.idx
quickshell/AudioBackend/input/: common.c  common.h  pipewire.c  pipewire.h
quickshell/AudioBackend/output/: raw.h
rofi/: tissla.rasi
scripts/: gpu-temp.sh  gpu-vram.sh  (+2 more)
themes/: mocha  (+2 more)
(+103 files in other folders)
